# Test

./: README.md  opencv-video&picture.cpp  opencv-video&picture.py  ssd+opencv+v$p.py  yolov3+opencv+v&p.cpp
catkin_ws/: kinect-ros.sh
catkin_ws/devel/: .catkin  setup.sh
catkin_ws/devel/include/kinect/: MsgKinect.h
catkin_ws/devel/include/ros_tutorials_topic/: MsgTutorial.h
catkin_ws/devel/lib/kinect/: kinect_node
catkin_ws/devel/lib/my_first_ros_pkg/: hello_world_node
catkin_ws/devel/lib/pkgconfig/: kinect.pc  my_first_ros_pkg.pc  ros_tutorials_topic.pc
catkin_ws/devel/lib/ros_tutorials_topic/: topic_publisher
catkin_ws/devel/share/common-lisp/ros/kinect/msg/: _package.lisp  _package_MsgKinect.lisp
catkin_ws/devel/share/gennodejs/ros/kinect/msg/: MsgKinect.js  _index.js
catkin_ws/devel/share/kinect/cmake/: kinectConfig.cmake
catkin_ws/devel/share/my_first_ros_pkg/cmake/: my_first_ros_pkgConfig.cmake
catkin_ws/devel/share/ros_tutorials_topic/cmake/: ros_tutorials_topic-msg-paths.cmake
catkin_ws/src/kinect/: package.xml
catkin_ws/src/kinect/include/: kinect_head.h  kinect_opencv.h  kinect_yolo.h
catkin_ws/src/kinect/src/: kinect_follow2.cpp  kinect_node.cpp  kinect_pub.cpp  kinect_yolo.cpp  test.cpp  test.cpp.autosave
catkin_ws/src/kinect_py/: CMakeLists.txt  kinect_py.py  kinect_py_test.py  package.xml
catkin_ws/src/multimaster/config/: config_cza_laptop.yaml  config_dly.yaml  config_fisheye.yaml  config_lps.yaml
catkin_ws/src/multimaster/launch/: master_cza_laptop.launch  master_dly.launch  master_fisheye.launch  master_localization.launch
devel/: .rosinstall
devel/lib/kinect/: kinect_follow  kinect_rollpub  kinect_socket  kinect_test  kinect_yolo
devel/lib/python2.7/dist-packages/kinect/msg/: _MsgKinect.py  __init__.py
devel/lib/ros_tutorials_topic/: topic_subscriber
devel/share/common-lisp/ros/kinect/msg/: MsgKinect.lisp  kinect-msg.asd
devel/share/ros_tutorials_topic/cmake/: ros_tutorials_topic-msg-extras.cmake  ros_tutorials_topicConfig.cmake
devel/share/roseus/ros/kinect/: manifest.l
devel/share/roseus/ros/kinect/msg/: MsgKinect.l
devel/share/roseus/ros/ros_tutorials_topic/: manifest.l
kinect-test/: Kinect-test.sln  mscoco_label_map.pbtxt
kinect-test/Kinect-test/: Kinect-test.cpp  Kinect-test.vcxproj  Kinect-test.vcxproj.filters  data.cpp  data.h  head.cpp  head.h  kinect_train.cpp  stdafx.cpp
multimaster/config/: config_cyber-desktop.yaml  config_cyber-desktop_data_record.yaml  config_kinect.yaml  config_localization.yaml  config_qyq.yaml
multimaster/launch/: master.launch  master_cyber-desktop.launch  master_hhr.launch  master_kinect.launch  master_lps_simulation.launch  master_path_plan.launch
pallet_detection/: CMakeLists.txt  main.cpp  package.xml  pallet_top.cpp  pallet_top.h
pallet_detection/include/grid_map/: grid_map_node.h  map_generation.h  radial_search_node.h  transform_filter_node.h
pallet_detection/launch/: grid_map.launch  pallet_detect.launch
pallet_detection/params/: pallet.yaml
pallet_detection/src/: grid_map_node.cc  map_generation.cc  plane_fitting_ground_segmenter.cpp
rgbd_image/: CMakeLists.txt  package.xml
rgbd_image/include/: rgbd_class.h
rgbd_image/launch/: Filter_image.launch
rgbd_image/params/: filter.yaml
rgbd_image/src/: rgbd_class.cpp  rgbd_filter.cpp
socket/: CMakeLists.txt  main.cpp
src/kinect/: CMakeLists.txt
src/kinect/include/: kinect_pub.h  kinect_socket.h
src/kinect/src/: kinect_follow.cpp  kinect_socket.cpp  kinect_yolo2.cpp
src/kinect_py/: kinect_py_cache.py  kinect_py_socket.py  kinect_ssd.py
src/kinect_py/msg/: kinect_pymsg.msg
src/multimaster/config/: config.yaml  config_cyh.yaml  config_kinect.yaml  config_path_plan.yaml
src/multimaster/launch/: master_cyber-desktop_data_record.launch  master_cyh.launch  master_gld.launch  master_hubing.launch  master_lps.launch  master_lty.launch  master_qyq.launch
